--- a/GeoSocial/html/maps.html
+++ b/GeoSocial/html/maps.html
@@ -5,13 +5,13 @@
       html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
     </style>
     <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMImxWimYl48WVSKlIXCGjfm9TGpGIaR4">
+      src="https://maps.googleapis.com/maps/api/js?key=ParamAPIKey">
     </script>
     <script type="text/javascript">
     var map;
 
     function initialize() {
-    	var mapOptions = {center: { lat: -34.397, lng: 150.644}, zoom: 8};
+    	var mapOptions = {center: { lat: ParamDftLat, lng: ParamDftLng}, zoom: 8};
     	map = new google.maps.Map(document.getElementById('map-canvas'),mapOptions);  
 
     	google.maps.event.addListener(map, 'rightclick', function(event) {
