--- a/GeoSocial/html/maps.html
+++ b/GeoSocial/html/maps.html
@@ -15,7 +15,8 @@
     	map = new google.maps.Map(document.getElementById('map-canvas'),mapOptions);  
 
     	google.maps.event.addListener(map, 'rightclick', function(event) {
-    		var marker = new google.maps.Marker({position: event.latLng , map: map}); 
+    		var image =  'http://maps.google.com/mapfiles/ms/icons/yellow-dot.png'
+    		var marker = new google.maps.Marker({position: event.latLng , map: map, icon:image}); 
     		getCoordinates(event.latLng.lat(),event.latLng.lng());
     	});
     }
